# libtlm-nfc

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libtlm-nfc.pc.in
src/: Makefile.am  gtlm-nfc.c  gtlm-nfc.h
test/: valgrind.supp
